--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/pdf.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/pdf.html.twig
@@ -61,7 +61,7 @@
                 {% elseif entity.ucreado=='dwakao' %}
                 Sr: Elard Escala
                 {% elseif entity.ucreado=='ytanaka' %}
-                Sra: Yoshiko Tanka
+                Sra: Yoshiko Tanaka
                 {% elseif entity.ucreado=='hmiyauchi' %}
                 Sra: Hiroko Miyauchi
                 {% elseif entity.ucreado=='tokawa' %}
@@ -116,7 +116,7 @@
         </tr>
         <tr>
             <td colspan="3">
-                <p>Le restan {{cantidadactual }} días de vacaciones del 2013</p>
+                <p>Le restan {{cantidadactual }} días de vacaciones del 2014</p>
             </td>       
         </tr>  
     </table>
