--- a/src/Embajada/ValijaBundle/Resources/views/Hremision/impresion.html.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Hremision/impresion.html.twig
@@ -112,14 +112,9 @@
 	<p></p>
 	<p></p>
 	<p></p>
-	<table>
-		<tr >
-			<td class="centrado">Elard Escala</td>
-		</tr>
-		<tr>
-			<td class="centrado">Embajador del Perú en Japón</td>
-		</tr>
-	</table>
+			<p align="center">Elard Escala<br>Embajador del Perú en Japón</p>
+
+
 	<p></p>
 	<p></p>
 	<p></p>
@@ -130,14 +125,8 @@
 	<p><strong>OBSERVACIONES:</strong></p>
 	<p>{{ entity.observaciones }}</p>
 	<p></p>
-	<table>
-		<tr >
-			<td class="centrado">Elard Escala</td>
-		</tr>
-		<tr>
-			<td class="centrado">Embajador del Perú en Japón</td>
-		</tr>
-	</table>
+
+			<p align="center">Elard Escala<br>Embajador del Perú en Japón</p>
 	<p></p>
 	<div class="gestor"><font size="10">
 {{ entity.ucreado}}</font></div>	
@@ -148,18 +137,12 @@
 	<p></p>
 	<p></p>
 	<p></p>
-	<table>
-		<tr >
-			<td class="centrado">Elard Escala</td>
-		</tr>
-		<tr>
-			<td class="centrado">Embajador del Perú en Japón</td>
-		</tr>
-	</table>
+
+			<p align="center">Elard Escala<br>Embajador del Perú en Japón</p>
 	<p></p>
 	<p></p>
 	<p></p>
-	<div class="gestor"><font size="10">
+	
 {{ entity.ucreado}}</font></div>	
 	{% endif %}
 
