--- a/src/Embajada/ValijaBundle/Resources/views/Valija/guia.html.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Valija/guia.html.twig
@@ -102,6 +102,6 @@ table{
 
 <p></p><p></p><p></p>
 <p></p><p></p><p></p>
-<p align="center">Elard Escala <br>Embajador	</p>
+<p align="center">Elard Escala<br>Embajador del Perú en Japón</p>
 </body>
 </html>
