--- a/src/Embajada/OrhBundle/Resources/views/Compensatorios/aprobarregistro.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Compensatorios/aprobarregistro.html.twig
@@ -9,6 +9,7 @@
                 <h3><i class="icon-list"></i>Aprobar Registro de Compensatorios</h3>
             </div>
         </div>
+        {% if app.user.id<=3  %}
         <div class="box-content">
             <form action="{{ path('compensatorios_actualizarregistro', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <div class="span12">
@@ -190,6 +191,7 @@
             </div>
             </form>
         </div>
+        {% endif %}
     </div>
 </div>
 <script type="text/javascript">
