--- a/src/Embajada/OrhBundle/Resources/views/Compensatorios/email.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Compensatorios/email.html.twig
@@ -26,7 +26,7 @@
         </tr>
         <tr>
             <td>
-                <a href="http://192.168.0.250{{ path('compensatorios_aprobarregistro', { 'id': entity.id }) }}" style="background:#0066FF ; border-radius: 5px; color: #FFF; font-size: 21px; padding: .5em 1em; text-decoration: none;" >Ver solicitud</a>
+                <a href="http://{{ruta}}{{ path('compensatorios_aprobarregistro', { 'id': entity.id }) }}" style="background:#0066FF ; border-radius: 5px; color: #FFF; font-size: 21px; padding: .5em 1em; text-decoration: none;" >Ver solicitud</a>
             </td>
             <td style="font-size: 28px; padding: .5em;">
                  <strong style="color: #C06; padding-left: 1em;"></strong>
