--- a/src/Embajada/OrhBundle/Resources/views/Compensatorios/emailrespuestacompensatorio.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Compensatorios/emailrespuestacompensatorio.html.twig
@@ -10,13 +10,15 @@
 <body>
     <table cellpadding="0" cellspacing="0" style="width:100%;" width="100%">
         <tr style="background: #1BE022; color: #FFF;">
-            <td style="padding: 1em;"><a style="color: #FFF; font-size: 21px; text-decoration: none;" >Solicitud de Vacaciones</a></td>
-            <td style="text-align: right; padding: 1em;">{% if entity.fechadesolitud %}{{ entity.fechadesolitud|date('d-m-Y') }}{% endif %}<span style="color: #FFF; display: block; font-size: 18px;"></span></td>
+            <td style="padding: 1em;"><a style="color: #FFF; font-size: 21px; text-decoration: none;" >Respuesta de Solicitud de Compensatorio</a></td>
+            <td style="text-align: right; padding: 1em;">{#% if entity.fechadeaprobado %}{{ entity.fechadeaprobado|date('d-m-Y') }}{% endif %#}<span style="color: #FFF; display: block; font-size: 18px;"></span></td>
         </tr>
 
         <tr>
-            <td colspan="2" style="font-size: 18px; padding: 1em .5em;"><br>La presente es para comunicarle que el se&ntilde;or (a) {{ numvac.name }} {{ numvac.apellidos }} ha solicitado hacer uso de sus vaciones desde el dia {% if entity.fechadeinicio %}{{ entity.fechadeinicio|date('d/m/Y') }}{% endif %} al dia {% if entity.fechadefin %}{{ entity.fechadefin|date('d/m/Y') }}{% endif %} . </td>
+            <td colspan="2" style="font-size: 18px; padding: 1em .5em;"><br>La presente es para comunicarle que con fecha {% if entity.fechadeaprobacion2 %}{{ entity.fechadeaprobacion2|date('d-m-Y') }}{% endif %} ha sido {%if entity.estado2==1 %}aprobada {% else %}denegada{% endif%} su solicitud por el Jefe de Cancilleria <br>
+            </td>
         </tr>
+       
         <tr>
             <td style="padding-top: 5px;">
                 <a style="color: #000; font-size: 21px; font-weight: bold; text-decoration: none;" >
@@ -25,9 +27,6 @@
             <td style="padding-top: 20px;">&nbsp;</td>
         </tr>
         <tr>
-            <td>
-                <a href="{{ruta}}/{{ path('vacaciones_edit', { 'id': entity.id }) }}"style="background:#0066FF ; border-radius: 5px; color: #FFF; font-size: 21px; padding: .5em 1em; text-decoration: none;" >Ver solicitud</a>
-            </td>
             <td style="font-size: 28px; padding: .5em;">
                  <strong style="color: #C06; padding-left: 1em;"></strong>
             </td>
