--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/edit.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends "::base8.html.twig" %}
 {% block body %}
 <div class="row-row-fluid">
-{% if is_granted("ROLE_ADMIN") and entity.aprobado==null %}
+{% if is_granted("ROLE_ADMIN") and entity.aprobado==null or app.user.username=='cmurillo' %}
     <div class="span12">
         <div class="box">
             <div class="box-title">
@@ -11,8 +11,11 @@
             </div>
         </div>
         <div class="span12">
-        <h4>El dia {{ entity.fechadesolitud|date('d-m-Y') }} el usuario {{entity.ucreado}} solicito hacer usos de vacaciones del dia {{ entity.fechadeinicio|date('d-m-Y') }} al {{ entity.fechadefin|date('d-m-Y') }}.
+        <h4>El dia {{ entity.fechadesolitud|date('d-m-Y') }} La señor(a) {{entity.ucreado.name}} {{entity.ucreado.apellidos}} solicito hacer usos de vacaciones del dia {{ entity.fechadeinicio|date('d-m-Y') }} al {{ entity.fechadefin|date('d-m-Y') }}.
         </h4>
+        <h4>Le restan {{entity.ucreado.numerodediasdevacaciones}} días de vacaciones.</h4>
+        <br>
+        <br>
         </div>
         <form action="{{ path('vacaciones_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <div class="span4">
